--- a/Productos.html
+++ b/Productos.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header >
+    <header class="bg" >
 
 
 
@@ -24,8 +24,8 @@
          <a class="#"><img src="./Multimedia/Artea LOGOS/Logo principal.png"></a>
          <nav class="navbar navbar-expand">
             <div class="navbar-nav">
-                  <a class="nav-link" href="#">Inicio</a>
-                  <a class="nav-link" href="Productos.html">Productos</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
+                  <a class="nav-link" href="#">Productos</a>
                   <a class="nav-link" href="Contacto.html">Contactanos</a>
             </div>
           </nav>
