--- a/Contacto.html
+++ b/Contacto.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header >
+    <header class="bg">
 
 
 
@@ -24,9 +24,9 @@
          <a class="#"><img src="./Multimedia/Artea LOGOS/Logo principal.png"></a>
          <nav class="navbar navbar-expand">
             <div class="navbar-nav">
-                  <a class="nav-link" href="#">Inicio</a>
+                  <a class="nav-link" href="index.html">Inicio</a>
                   <a class="nav-link" href="Productos.html">Productos</a>
-                  <a class="nav-link" href="Contacto.html">Contactanos</a>
+                  <a class="nav-link" href="#">Contactanos</a>
             </div>
           </nav>
         </section>
