--- a/index.html
+++ b/index.html
@@ -32,7 +32,36 @@
         </section>
     </header>
 
+    <h1>Articulos</h1>
+    <div id="contenido-fichas" class="back"></div>
 
-<script src="/artea.js"></script>    
+  
+    <footer>
+      <section class="container-fluid mt-5 footer__bg">
+        <article class="row align-items-center">
+          <div class="col-md-2">
+            <img class="img-fluid footer__logo" src="./assets/logo.png" alt="Logo Parfait Pastry">
+          </div>
+  
+          <div class="offset-md-1 col-md-4">
+            <p class="footer__slogan">It's time to get something sweet!</p>
+          </div>
+  
+          <div class="col-6 offset-md-1 col-md-2">
+            <p class="footer__font mt-2">FOLLOW US!</p>
+            <p><a href="https://www.instagram.com/parfait.reposteria/"> <img class="footer__item"
+                  src="./assets/logoinstagram.png" alt="Logo instagram"></a></p>
+            <p><a href="https://www.facebook.com/parfait.repostria/"> <img class="footer__item"
+                  src="./assets/logofacebook.png" alt="Logo facebook"></a></p> 
+            <p><a
+                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
+                <img class="footer__item" src="./assets/logowhatsapp.png" alt="Logo whatsapp"></a></p>
+  
+          </div>
+        </article>
+      </section>
+    </footer>    
+
+<script src="JS/artea2.js"></script>    
 </body>
 </html>
