--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
 </head>
 
 <body>
-    <header >
-
-
-
-        <section class="container-fluid aling-center">
-         <a class="#"><img src="./Multimedia/Artea LOGOS/Logo principal.png"></a>
-         <nav class="navbar navbar-expand">
-            <div class="navbar-nav">
-                  <a class="nav-link" href="#">Inicio</a>
-                  <a class="nav-link" href="Productos.html">Productos</a>
-                  <a class="nav-link" href="Contacto.html">Contactanos</a>
+    <header>
+        <section class="header" style="text-align:center;">
+         <a href="./index.html"><img class="" src="./Multimedia/Artea LOGOS/Logo principal.png"></a>
+         <nav class="">
+            <div class="hd__navbar">
+                  <a class="nav__link" href="#">Inicio</a>
+                  <a class="nav__link" href="Productos.html">Productos</a>
+                  <a class="nav__link" href="Contacto.html">Contactanos</a>
             </div>
           </nav>
         </section>
@@ -37,31 +34,30 @@
 
   
     <footer>
-      <section class="container-fluid mt-5 footer__bg">
-        <article class="row align-items-center">
-          <div class="col-md-2">
-            <img class="img-fluid footer__logo" src="./assets/logo.png" alt="Logo Parfait Pastry">
+      <section>
+        <article class="footer">
+          <div>
+            <img class="footer__logo" src="./Multimedia/Artea LOGOS/Logo secundario.png" alt="Logo Artea Makeup">
           </div>
   
-          <div class="offset-md-1 col-md-4">
-            <p class="footer__slogan">It's time to get something sweet!</p>
-          </div>
-  
-          <div class="col-6 offset-md-1 col-md-2">
-            <p class="footer__font mt-2">FOLLOW US!</p>
-            <p><a href="https://www.instagram.com/parfait.reposteria/"> <img class="footer__item"
-                  src="./assets/logoinstagram.png" alt="Logo instagram"></a></p>
-            <p><a href="https://www.facebook.com/parfait.repostria/"> <img class="footer__item"
-                  src="./assets/logofacebook.png" alt="Logo facebook"></a></p> 
+          <div>
+            
+            <p><a href="https://www.instagram.com/arteamakeup/ "> <img class="footer__item"
+                  src="./Multimedia/instagram.svg" alt="Logo instagram"></a></p>
+
+            <p><a href="https://www.facebook.com"> <img class="footer__item"
+                  src="./Multimedia/facebook.svg" alt="Logo facebook"></a></p> 
+
             <p><a
                 href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
-                <img class="footer__item" src="./assets/logowhatsapp.png" alt="Logo whatsapp"></a></p>
+                <img class="footer__item" src="./Multimedia/whatsapp.svg" alt="Logo whatsapp"></a></p>
   
           </div>
+          
         </article>
       </section>
     </footer>    
 
-<script src="JS/artea2.js"></script>    
+<script src=""></script>    
 </body>
 </html>
