--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artea Makeup</title>
-    <link rel="icon" href="./Multimedia/Artea LOGOS/Logotipo.png">
+    <link rel="icon" href="../Multimedia/Artea LOGOS/Logotipo.png">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CCS -->
-    <link rel="stylesheet" href="artea.css">
+    <link rel="stylesheet" href="../artea.css">
+
 </head>
 
 <body>
     <header>
         <section class="header">
-         <a href="./index.html"><img class="" src="./Multimedia/Artea LOGOS/Logo principal.png"></a>
+         <a href="../index.html"><img class="" src="../Multimedia/Artea LOGOS/Logo principal.png"></a>
          <nav class="">
             <div class="hd__navbar">
-                  <a class="nav__link" href="#">Inicio</a>
-                  <a class="nav__link" href="./Secciones/Productos.html">Productos</a>
-                  <a class="nav__link" href="./Secciones/Contacto.html">Contactanos</a>
+                  <a class="nav__link" href="../index.html">Inicio</a>
+                  <a class="nav__link" href="Productos.html">Productos</a>
+                  <a class="nav__link" href="#">Contactanos</a>
             </div>
           </nav>
         </section>
@@ -35,20 +36,20 @@
       <section>
         <article class="footer">
           <div>
-            <img class="footer__logo" src="./Multimedia/Artea LOGOS/Logo secundario.png" alt="Logo Artea Makeup">
+            <img class="footer__logo" src="../Multimedia/Artea LOGOS/Logo secundario.png" alt="Logo Artea Makeup">
           </div>
   
           <div>
             
             <p><a href="https://www.instagram.com/arteamakeup/ "> <img class="footer__item"
-                  src="./Multimedia/instagram.svg" alt="Logo instagram"></a></p>
+                  src="../Multimedia/instagram.svg" alt="Logo instagram"></a></p>
 
             <p><a href="https://www.facebook.com"> <img class="footer__item"
-                  src="./Multimedia/facebook.svg" alt="Logo facebook"></a></p> 
+                  src="../Multimedia/facebook.svg" alt="Logo facebook"></a></p> 
 
             <p><a
                 href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
-                <img class="footer__item" src="./Multimedia/whatsapp.svg" alt="Logo whatsapp"></a></p>
+                <img class="footer__item" src="../Multimedia/whatsapp.svg" alt="Logo whatsapp"></a></p>
   
           </div>
           
@@ -56,9 +57,8 @@
       </section>
     </footer>    
 
-<!--Bootstrap-->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<!--JS-->
 <script src=""></script>    
 </body>
 </html>
