--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CCS -->
-    <link rel="stylesheet" href="../artea.css">
+    <link rel="stylesheet" href="../CSS/artea.css">
 
 </head>
 
@@ -29,7 +29,46 @@
         </section>
     </header>
 
-   
+    <main>
+      <section class="container-fluid mt-5">
+        <article class="row justify-content-center">
+          <div class="col-10 col-md-8">
+  
+            <h3 class="text-center pg__title">Contacto</h3>
+            <form class="mt-5" action="#" method="get" enctype="text/plain">
+  
+              <legend class="form__bg">
+        
+                <div class="mb-3"><label class="form__font" for="Name"> ¿Cual es tu nombre? </label>
+                  <input class="form-control" type="text" name="Name">
+                </div>
+  
+                <div class="mb-3"><label class="form__font" for="Phone_number">¿Algun número de telefono donde te podamos contactar?</label>
+                  <input class="form-control" type="number" name="Phone_number" min="0">
+                </div>
+  
+                <div class="mb-3"><label class="form__font" for="email">¿Y tu correo electronico?</label>
+                  <input class="form-control" type="email" id="email">
+                  <div class="fs-6 form-text form__font">NOTA: los datos proporcionados son confidenciales y para uso exclusivo de Artea. </div>
+                </div>
+               
+                <div><label class="form-label form__font" for="comment"> Sentite libre de hacernos cualquier consulta o comentario! :)
+                  </label>
+                  <textarea class="form-control mb-3 form__font" id="comment" rows="6"></textarea></div>
+  
+              </legend>
+  
+  
+              <div class="btn-form text-center">
+                <button id="enviarFormulario" class="btn btn__send " type="submit" value="send" >ENVIAR</button>
+                <button class="btn btn__delete " type="reset" value="delete_all">BORRAR TODO</button>
+              </div>
+  
+            </form>
+          </div>
+        </article>
+      </section>
+    </main>
 
   
     <footer>
@@ -57,8 +96,13 @@
       </section>
     </footer>    
 
+<script src="../JS/contacto.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src=""></script>    
+<!--SweetAlert-->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!--Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 </html>
