--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CCS -->
-    <link rel="stylesheet" href="../artea.css">
+    <link rel="stylesheet" href="../CSS/artea.css">
 
 </head>
 
@@ -29,20 +29,27 @@
         </section>
     </header>
 
+     <button onclick="openmodal (`#modal1`)"><span id="contadorCarrito">0</span> Carrito</button>
+    <div id="modal1" class="modal-wrapper">
+        <div class="modal-cont">
+            <div class="modal-header">
+                <button onclick="closemodal (`#modal1`)">cerrar</button> 
+            </div>
+            <div class="modal-content">
+  
+                <div id="carrito-contenedor"></div>
+                <p>Precio total: $<span id="precioTotal">0</span></p>
+                <button class="vaciar-carrito" id="vaciar-carrito">vaciar carrito</button>
+  
+            </div>
+        </div>
+    </div> 
+    
     <div id="contenedor-de-productos"></div>
    
 
-    <div class="modal-contenedor">
-      <div class="modal-carrito">
-          <h3>Carrito</h3>
-          <button id="carritoCerrar"></button>
-          <div id="carrito-contenedor">
-
-          </div>
-          <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
-          <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
-      </div>
-    </div>
+   
+  
 
     <footer>
       <section>
@@ -69,8 +76,12 @@
       </section>
     </footer>    
 
+<!--JS-->
+<script src="../JS/productos.js"></script> 
+<script src="../JS/botonCarrito.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="../constructor.js"></script>    
+<!--Bootstrap-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  
 </body>
 </html>
