--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="icon" href="./Multimedia/Artea LOGOS/Logotipo.png">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- CCS -->
-    <link rel="stylesheet" href="artea.css">
+    <link rel="stylesheet" href="/CSS/artea.css">
 </head>
 
 <body>
@@ -28,7 +27,21 @@
         </section>
     </header>
 
-   
+   <section>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./Multimedia/CATALOGO/1.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./Multimedia/CATALOGO/15.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./Multimedia/CATALOGO/16.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+   </section>
 
   
     <footer>
@@ -57,7 +70,7 @@
     </footer>    
 
 <!--Bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <!--JS-->
 <script src=""></script>    
 </body>
