--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -46,7 +46,7 @@
            
             <div>
             <h3 class="text-center">¿Alguna duda o sugerencia?</h3>
-            <form class="mt-5" action="../enviarAlCorreo.php" method="post" enctype="text/plain">
+            <form class="mt-5" action="#" method="post" enctype="text/plain">
   
               <legend class="">
                 <div class="mb-3"><label class="form__font" for="Name"> ¿Cual es tu nombre? </label>
