--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -36,11 +36,10 @@
                 <button onclick="closemodal (`#modal1`)">cerrar</button> 
             </div>
             <div class="modal-content">
-  
                 <div id="carrito-contenedor"></div>
                 <p>Precio total: $<span id="precioTotal">0</span></p>
-                <button class="vaciar-carrito" id="vaciar-carrito">vaciar carrito</button>
-  
+                <button class="btn btn-dark" id="vaciar-carrito">Vaciar carrito</button>
+                <button class="btn btn-dark mt-2" id="comprar-carrito">Comprar</button>
             </div>
         </div>
     </div> 
