--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -23,7 +23,7 @@
             <div class="hd__navbar">
                   <a class="nav__link" href="../index.html">Inicio</a>
                   <a class="nav__link" href="Productos.html">Productos</a>
-                  <a class="nav__link" href="#">Contactanos</a>
+                  <a class="nav__link" href="Contacto.html">Contactanos</a>
             </div>
           </nav>
         </section>
@@ -46,7 +46,7 @@
            
             <div>
             <h3 class="text-center">¿Alguna duda o sugerencia?</h3>
-            <form class="mt-5" action="#" method="post" enctype="text/plain">
+            <form class="mt-5" action="#" method="get" enctype="text/plain">
   
               <legend class="">
                 <div class="mb-3"><label class="form__font" for="Name"> ¿Cual es tu nombre? </label>
