--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -44,7 +44,7 @@
         </div>
     </div> 
     
-    <div id="contenedor-de-productos" class="contenedor-de-productos"></div>
+    <div id="contenedor-de-productos" class="row row-col-12"></div>
    
 
    
@@ -57,7 +57,7 @@
             <img class="footer__logo" src="../Multimedia/Artea LOGOS/Logo secundario.png" alt="Logo Artea Makeup">
           </div>
   
-          <div>
+          <div class="footer__redes">
             
             <p><a href="https://www.instagram.com/arteamakeup/ "> <img class="footer__item"
                   src="../Multimedia/Redes LOGOS/miniinstagram.svg" alt="Logo Instagram"></a></p>
