Estilos en el carrito. pt1

--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -33,13 +33,13 @@
     <div id="modal1" class="modal-wrapper">
         <div class="modal-cont">
             <div class="modal-header">
-                <button onclick="closemodal (`#modal1`)">cerrar</button> 
+                <button class="botonCerrar" onclick="closemodal (`#modal1`)">X</button> 
             </div>
             <div class="modal-content">
-                <div id="carrito-contenedor"></div>
+                <div id="carrito-contenedor" class="carrito-contenedor"></div>
                 <p>Precio total: $<span id="precioTotal">0</span></p>
-                <button class="btn btn-dark" id="vaciar-carrito">Vaciar carrito</button>
-                <button class="btn btn-dark mt-2" id="comprar-carrito">Comprar</button>
+                <button class="btn btn-dark mx-2" id="vaciar-carrito">Vaciar carrito</button>
+                <button class="btn btn-dark mt-2 mx-2" id="comprar-carrito">Comprar</button>
             </div>
         </div>
     </div> 
@@ -59,18 +59,18 @@
   
           <div class="footer__redes">
             
-            <p><a href="https://www.instagram.com/arteamakeup/ "> <img class="footer__item"
+            <p><a href="https://www.instagram.com/arteamakeup/ " target="_blank" rel="noopener noreferrer"> <img class="footer__item"
                   src="../Multimedia/Redes LOGOS/miniinstagram.svg" alt="Logo Instagram"></a></p>
 
-            <p><a href="https://www.facebook.com"> <img class="footer__item"
+            <p><a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"> <img class="footer__item"
                   src="../Multimedia/Redes LOGOS/minifacebook.svg" alt="Logo Facebook"></a></p> 
 
             <p><a
-                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
+                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0" target="_blank" rel="noopener noreferrer">
                 <img class="footer__item" src="../Multimedia/Redes LOGOS/miniwhatsapp.svg" alt="Logo Whatsapp"></a></p>
   
             <p><a
-                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
+                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0" target="_blank" rel="noopener noreferrer">
                 <img class="footer__item" src="../Multimedia/Redes LOGOS/minitik-tok.png" alt="Logo Tiktok"></a></p>
           </div>
           
