--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -29,20 +29,32 @@
         </section>
     </header>
 
-     <button onclick="openmodal (`#modal1`)"><span id="contadorCarrito">0</span> Carrito</button>
-    <div id="modal1" class="modal-wrapper">
-        <div class="modal-cont">
-            <div class="modal-header">
-                <button class="botonCerrar" onclick="closemodal (`#modal1`)">X</button> 
+    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"><span id="contadorCarrito">0</span>
+      Carrito
+      </button>
+
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header text-center back">
+            <h5 class="modal-title" id="exampleModalLabel">Carrito de Compra</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-content">
-                <div id="carrito-contenedor" class="carrito-contenedor"></div>
-                <p>Precio total: $<span id="precioTotal">0</span></p>
-                <button class="btn btn-dark mx-2" id="vaciar-carrito">Vaciar carrito</button>
-                <button class="btn btn-dark mt-2 mx-2" id="comprar-carrito">Comprar</button>
+            <div class="container-fluid text-center">
+              <div class="row">
+                <div class="col-md-12">
+                  <div id="carrito-contenedor" class="carrito-contenedor"></div>
+                  <h2 class="text-center back mt-3">Precio total: $<span id="precioTotal">0</span></h2>
+                </div>
+              </div>
             </div>
+            <div class="modal-footer">
+              <button class= "btn btn-dark mt-2" id="vaciar-carrito">Vaciar carrito</button>
+              <button class= "btn btn-dark mt-2" id="comprar-carrito">Comprar</button>
+            </div>
+          </div>
         </div>
-    </div> 
+      </div>
     
     <div id="contenedor-de-productos" class="row row-col-12"></div>
    
