Proyecto listo para entregar

--- a/Secciones/Contacto.html
+++ b/Secciones/Contacto.html
@@ -68,7 +68,7 @@
               </legend>
   
   
-              <div class="btn-form text-center">
+              <div class="btn-form text-center mb-3">
                 <button id="enviarFormulario" class="btn btn__send " type="submit" value="send" >ENVIAR</button>
                 <button class="btn btn__delete " type="reset" value="delete_all">BORRAR TODO</button>
               </div>
@@ -88,20 +88,20 @@
             <img class="footer__logo" src="../Multimedia/Artea LOGOS/Logo secundario.png" alt="Logo Artea Makeup">
           </div>
   
-          <div>
+          <div class="footer__redes">
             
-            <p><a href="https://www.instagram.com/arteamakeup/ "> <img class="footer__item"
+            <p><a href="https://www.instagram.com/arteamakeup/ " target="_blank" rel="noopener noreferrer"> <img class="footer__item"
                   src="../Multimedia/Redes LOGOS/miniinstagram.svg" alt="Logo Instagram"></a></p>
 
-            <p><a href="https://www.facebook.com"> <img class="footer__item"
+            <p><a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer"> <img class="footer__item"
                   src="../Multimedia/Redes LOGOS/minifacebook.svg" alt="Logo Facebook"></a></p> 
 
             <p><a
-                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
+                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0" target="_blank" rel="noopener noreferrer">
                 <img class="footer__item" src="../Multimedia/Redes LOGOS/miniwhatsapp.svg" alt="Logo Whatsapp"></a></p>
   
             <p><a
-                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0">
+                href="https://api.whatsapp.com/send?phone=5491122536980&app=facebook&entry_point=page_cta&fbclid=IwAR1pHzh93n9IaV0tzvILpH26JK5ecjmvZzjKFO-NJYt_UajSkJLEAp3USJ0" target="_blank" rel="noopener noreferrer">
                 <img class="footer__item" src="../Multimedia/Redes LOGOS/minitik-tok.png" alt="Logo Tiktok"></a></p>
           </div>
           
