--- a/Secciones/Productos.html
+++ b/Secciones/Productos.html
@@ -29,7 +29,7 @@
         </section>
     </header>
 
-    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"><span id="contadorCarrito">0</span>
+    <button type="button" class="btn btn-dark mx-3" data-bs-toggle="modal" data-bs-target="#exampleModal"><span id="contadorCarrito">0</span>
       Carrito
       </button>
 
